# ckanext-scientometrics

./: .pre-commit-config.yaml  README.md  pyproject.toml
ckanext/scientometrics/: model.py
ckanext/scientometrics/migration/scientometrics/: alembic.ini  env.py
ckanext/scientometrics/migration/scientometrics/versions/: e132bccf90e5_.py
